<resources>
    <string name="app_name">Empresa</string>
    <string name="welcome">BEM-VINDO AO\nEMPRESAS</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, contetur adipiscing elit. Nunc accumsan.</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="search">Search</string>
    <string name="search_hint">Pesquisar</string>
    <string name="preference_file_key">MY_SHARED_PREFERENCES_KEY</string>
    <string name="main_information">Clique na busca para inicar</string>
    <string name="empty_message">Nenhuma empresa foi encontrada\npara busca realizada</string>
</resources>
